tests/should_fail/import_missing_file.fit
import totally_nonexistent_xyz_999

fn run() -> ()
